[package]
name = "adb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
clap = { version = "4.5.31", features = ["derive"] }
epson = "0.1.4"
reqwest = { version = "0.12", features = ["rustls-tls", "blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
