[package]
name = "adb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
chrono = "0.4.35"
clap = { version = "4.5.31", features = ["derive"] }
epson = { version = "0.1.4", features = ["tokio"] }
reqwest = { version = "0.12", features = ["rustls-tls", "blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
